--- a/Src/Sample/Sample.CommandService/Sample.CommandService.csproj
+++ b/Src/Sample/Sample.CommandService/Sample.CommandService.csproj
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\..\packages\librdkafka.redist.0.11.3\build\librdkafka.redist.props" Condition="Exists('..\..\packages\librdkafka.redist.0.11.3\build\librdkafka.redist.props')" />
   <Import Project="..\..\packages\NETStandard.Library.NETFramework.2.1.0-preview2-25630-02\build\net461\NETStandard.Library.NETFramework.props" Condition="Exists('..\..\packages\NETStandard.Library.NETFramework.2.1.0-preview2-25630-02\build\net461\NETStandard.Library.NETFramework.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -71,6 +72,9 @@
     </Reference>
     <Reference Include="Castle.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Castle.Core.4.2.1\lib\net45\Castle.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Confluent.Kafka, Version=0.11.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Confluent.Kafka.0.11.3\lib\net46\Confluent.Kafka.dll</HintPath>
     </Reference>
     <Reference Include="log4net, Version=2.0.8.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
       <HintPath>..\..\packages\log4net.2.0.8\lib\net45-full\log4net.dll</HintPath>
@@ -569,6 +573,7 @@
     <Error Condition="!Exists('..\..\packages\NETStandard.Library.2.1.0-preview1-25625-01\build\netstandard2.0\NETStandard.Library.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\NETStandard.Library.2.1.0-preview1-25625-01\build\netstandard2.0\NETStandard.Library.targets'))" />
     <Error Condition="!Exists('..\..\packages\NETStandard.Library.NETFramework.2.1.0-preview2-25630-02\build\net461\NETStandard.Library.NETFramework.props')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\NETStandard.Library.NETFramework.2.1.0-preview2-25630-02\build\net461\NETStandard.Library.NETFramework.props'))" />
     <Error Condition="!Exists('..\..\packages\NETStandard.Library.NETFramework.2.1.0-preview2-25630-02\build\net461\NETStandard.Library.NETFramework.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\NETStandard.Library.NETFramework.2.1.0-preview2-25630-02\build\net461\NETStandard.Library.NETFramework.targets'))" />
+    <Error Condition="!Exists('..\..\packages\librdkafka.redist.0.11.3\build\librdkafka.redist.props')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\librdkafka.redist.0.11.3\build\librdkafka.redist.props'))" />
   </Target>
   <Import Project="..\..\packages\NETStandard.Library.2.1.0-preview1-25625-01\build\netstandard2.0\NETStandard.Library.targets" Condition="Exists('..\..\packages\NETStandard.Library.2.1.0-preview1-25625-01\build\netstandard2.0\NETStandard.Library.targets')" />
   <Import Project="..\..\packages\NETStandard.Library.NETFramework.2.1.0-preview2-25630-02\build\net461\NETStandard.Library.NETFramework.targets" Condition="Exists('..\..\packages\NETStandard.Library.NETFramework.2.1.0-preview2-25630-02\build\net461\NETStandard.Library.NETFramework.targets')" />
