--- a/Src/Sample/Sample.CommandService/packages.config
+++ b/Src/Sample/Sample.CommandService/packages.config
@@ -7,11 +7,13 @@
   <package id="Autofac.Mvc5" version="4.0.2" targetFramework="net46" />
   <package id="Castle.Core" version="4.2.1" targetFramework="net461" />
   <package id="CommonServiceLocator" version="2.0.3" targetFramework="net461" />
+  <package id="Confluent.Kafka" version="0.11.3" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net46" />
   <package id="jQuery" version="3.3.1" targetFramework="net461" />
   <package id="jQuery.UI.Combined" version="1.12.1" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net461" />
   <package id="knockoutjs" version="3.4.2" targetFramework="net461" />
+  <package id="librdkafka.redist" version="0.11.3" targetFramework="net461" />
   <package id="log4net" version="2.0.8" targetFramework="net461" />
   <package id="Microsoft.AspNet.Cors" version="5.2.4" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.4" targetFramework="net461" />
