--- a/Src/Sample/Sample.CommandService/packages.config
+++ b/Src/Sample/Sample.CommandService/packages.config
@@ -31,15 +31,16 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.4" targetFramework="net461" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net461" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net461" />
-  <package id="Microsoft.EntityFrameworkCore" version="2.1.0-rc1-final" targetFramework="net461" />
+  <package id="Microsoft.CSharp" version="4.4.0" targetFramework="net461" />
+  <package id="Microsoft.EntityFrameworkCore" version="2.0.3" targetFramework="net461" />
   <package id="Microsoft.EntityFrameworkCore.Abstractions" version="2.1.0-rc1-final" targetFramework="net461" />
   <package id="Microsoft.EntityFrameworkCore.Analyzers" version="2.1.0-rc1-final" targetFramework="net461" />
   <package id="Microsoft.EntityFrameworkCore.Attributes" version="2.1.0-preview1-final" targetFramework="net461" />
-  <package id="Microsoft.EntityFrameworkCore.InMemory" version="2.1.0-rc1-final" targetFramework="net461" />
-  <package id="Microsoft.EntityFrameworkCore.Relational" version="2.1.0-rc1-final" targetFramework="net461" />
-  <package id="Microsoft.EntityFrameworkCore.SqlServer" version="2.1.0-rc1-final" targetFramework="net461" />
+  <package id="Microsoft.EntityFrameworkCore.InMemory" version="2.0.3" targetFramework="net461" />
+  <package id="Microsoft.EntityFrameworkCore.Relational" version="2.0.3" targetFramework="net461" />
+  <package id="Microsoft.EntityFrameworkCore.SqlServer" version="2.0.3" targetFramework="net461" />
   <package id="Microsoft.Extensions.Caching.Abstractions" version="2.1.0-rc1-final" targetFramework="net461" />
-  <package id="Microsoft.Extensions.Caching.Memory" version="2.1.0-rc1-final" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Caching.Memory" version="2.0.2" targetFramework="net461" />
   <package id="Microsoft.Extensions.Configuration" version="2.1.0-rc1-final" targetFramework="net461" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.1.0-rc1-final" targetFramework="net461" />
   <package id="Microsoft.Extensions.Configuration.Binder" version="2.1.0-rc1-final" targetFramework="net461" />
