--- a/Src/Sample/Sample.CommandServiceCore/appsettings.json
+++ b/Src/Sample/Sample.CommandServiceCore/appsettings.json
@@ -31,7 +31,7 @@
     "LogLevel": {
       "Default": "Debug",
       "System": "Warning",
-      "Microsoft": "Info"
+      "Microsoft": "Information"
     },
     "Console": {
       "LogLevel": {
