--- a/Src/Sample/Sample.CommandServiceCore/Sample.CommandServiceCore.csproj
+++ b/Src/Sample/Sample.CommandServiceCore/Sample.CommandServiceCore.csproj
@@ -66,6 +66,7 @@
     <ProjectReference Include="..\..\iFramework.Plugins\IFramework.JsonNetCore\IFramework.JsonNet.csproj" />
     <ProjectReference Include="..\..\iFramework.Plugins\IFramework.Log4Net\IFramework.Log4Net.csproj" />
     <ProjectReference Include="..\..\iFramework.Plugins\IFramework.MessageQueue.EQueue\IFramework.MessageQueue.EQueue.csproj" />
+    <ProjectReference Include="..\..\iFramework.Plugins\IFramework.MessageQueue.RabbitMQ\IFramework.MessageQueue.RabbitMQ.csproj" />
     <ProjectReference Include="..\..\iFramework.Plugins\IFramework.MessageQueueCore.ConfluentKafka\IFramework.MessageQueue.ConfluentKafka.csproj" />
     <ProjectReference Include="..\..\iFramework.Plugins\IFramework.MessageQueueCore.InMemory\IFramework.MessageQueue.InMemory.csproj" />
     <ProjectReference Include="..\..\iFramework\IFramework.csproj" />
