--- a/Src/iFramework.Plugins/IFramework.DependencyInjection.Unity/IFramework.DependencyInjection.Unity.csproj
+++ b/Src/iFramework.Plugins/IFramework.DependencyInjection.Unity/IFramework.DependencyInjection.Unity.csproj
@@ -5,6 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.1.0" />
+    <PackageReference Include="Unity.Interception" Version="5.5.5" />
+    <PackageReference Include="Unity.Microsoft.DependencyInjection" Version="2.0.10" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\IFramework\IFramework.csproj" />
   </ItemGroup>
 
